freesia/k8s/apps/temporis/alertmanager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  labels:
    app.kubernetes.io/name: alertmanager
spec:
  ports:
    - name: http-web
      port: 9093
      targetPort: 9093
      protocol: TCP
    - name: reloader-web
      appProtocol: http
      port: 8080
      targetPort: reloader-web
  selector:
    app.kubernetes.io/name: alertmanager
  type: "ClusterIP"
