freesia/k8s/apps/temporis/alertmanager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  labels:
    app.kubernetes.io/name: alertmanager
spec:
  ingressClassName: nginx
  rules:
    - host: alertmanager-v3.harvestasya.org
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: alertmanager
                port:
                  number: 9093
